packer ci fix and aws cmd 404 fix

--- a/.github/workflows/packer-ci.yml
+++ b/.github/workflows/packer-ci.yml
@@ -32,6 +32,10 @@ jobs:
       with:
         version: latest
     
+    - name: Create webapp.zip
+      run: |
+        zip -r webapp.zip . -x "*.git*" "node_modules/*" "packer/aws.auto.pkrvars.hcl"
+  
     - name: Install plugins
       run: packer init .
 
