--- a/.github/workflows/packer-ci.yml
+++ b/.github/workflows/packer-ci.yml
@@ -54,4 +54,13 @@ jobs:
             -var "db_port=${{ secrets.DB_PORT }}" \
             -var "db_user=${{ secrets.DB_USER }}" \
             -var "db_password=${{ secrets.DB_PASSWORD }}" \
-            -var "db_database=${{ secrets.DB_DATABASE }}" .
+            -var "db_database=${{ secrets.DB_DATABASE }}" \
+            -var "instance_type=${{ secrets.INSTANCE_TYPE }}" \
+            -var "ami_name=${{ secrets.AMI_NAME }}" \
+            -var "ami_description=${{ secrets.AMI_DESCRIPTION }}" \
+            -var "ami_regions=${{ secrets.AMI_REGIONS }}" \
+            -var "region=${{ secrets.REGION }}" \
+            -var "source_ami=${{ secrets.SOURCE_AMI }}" \
+            -var "subnet_id=${{ secrets.SUBNET_ID }}" \
+            -var "ssh_username=${{secrets.SSH_USERNAME}}" \
+            aws.pkr.hcl
