zip file unzip debug4

--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -14,16 +14,33 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Zip folder
+    - name: Copy .env file temporarily
       run: |
-        zip -r webapp.zip .
-        if unzip -l webapp.zip | grep -q "\.env"; then
-          echo ".env file is included in the ZIP archive."
+        if [ -f .env ]; then
+          echo "Copying .env file temporarily for zipping."
+          cp .env .env.temp
+        else
+          echo "Error: .env file not found. Failing the workflow."
+          exit 1
+        fi
+    
+    - name: Zip folder with .env
+      run: |
+        zip -r webapp.zip . -x "*.git*" "node_modules/*" "aws.auto.pkrvars.hcl"
+    
+        # Check if .env.temp is in the ZIP file
+        if unzip -l webapp.zip | grep -q "\.env.temp"; then
+          echo ".env file included as .env.temp in the ZIP archive."
         else
           echo "Error: .env file not found in the ZIP archive. Failing the workflow."
           exit 1
         fi
-      
+    
+    - name: Remove temporary .env file
+      run: |
+        rm -f .env.temp
+        echo "Temporary .env file removed."
+    
     - name: Update AWS CLI to the latest version
       run: |
         sudo apt-get update
