--- a/scripts/mywebapp.service
+++ b/scripts/mywebapp.service
@@ -11,7 +11,7 @@ WorkingDirectory=/opt/webapp
 ExecStartPre=/usr/bin/npm install
 EnvironmentFile=/opt/webapp/.env
 ExecStart=/usr/bin/npm start
-Restart=on-failure
+Restart=always
 RestartSec=3
 StandardOutput=syslog
 StandardError=syslog
