--- a/scripts/mywebapp.service
+++ b/scripts/mywebapp.service
@@ -1,21 +1,16 @@
 [Unit]
 Description=webapp
-ConditionPathExists=/opt/webapp/.env
 After=network.target
 
 [Service]
-Type=simple
+ExecStartPre=/usr/bin/npm install
+ExecStart=/usr/bin/npx ts-node /opt/webapp/src/index.ts
+Restart=always
 User=csye6225
 Group=csye6225
+Environment=PATH=/usr/bin:/usr/local/bin
 WorkingDirectory=/opt/webapp
-ExecStartPre=/usr/bin/npm install
 EnvironmentFile=/opt/webapp/.env
-ExecStart=/usr/bin/npm start
-Restart=always
-RestartSec=3
-StandardOutput=syslog
-StandardError=syslog
-SyslogIdentifier=csye6225
 
 [Install]
 WantedBy=multi-user.target
