--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "start": "ts-node --log-error src/index.ts",
     "build": "tsc",
     "test": "jest --forceExit"
   },
@@ -17,13 +17,14 @@
   ],
   "author": "Amar Nagargoje",
   "license": "ISC",
- "devDependencies": {
+  "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/dotenv": "^8.2.0",
-    "@types/node": "^22.7.5",
-    "@types/sequelize": "^4.28.20",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
+    "@types/multer": "^1.4.12",
+    "@types/node": "^22.7.5",
+    "@types/sequelize": "^4.28.20",
     "@types/supertest": "^2.0.11",
     "jest": "^27.5.1",
     "nodemon": "^2.0.15",
@@ -34,11 +35,17 @@
   },
   "dependencies": {
     "@types/express": "^5.0.0",
+    "app-root-path": "^3.1.0",
+    "aws-sdk": "^2.1691.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "multer": "^1.4.5-lts.1",
+    "node-json-logger": "^0.2.1",
     "pg": "^8.13.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.4"
+    "sequelize": "^6.37.4",
+    "statsd-client": "^0.4.7",
+    "winston": "^3.15.0"
   }
 }
