--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -15,21 +15,7 @@ jobs:
       uses: actions/checkout@v2
     
     - name: Zip folder
-      run: zip -r webapp.zip . -x "*.git*" "node_modules/*" "aws.auto.pkrvars.hcl"
-    
-    - name: Update AWS CLI to the latest version
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y curl unzip
-        curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-        unzip awscliv2.zip
-        sudo ./aws/install --update   # Add the --update flag to update the existing CLI
-        aws --version  # Check the updated version
-        aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }} --profile dev
-        aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }} --profile dev
-        aws configure set region ${{ secrets.REGION }} --profile dev
-        aws configure set output json --profile dev
-        aws configure list --profile dev
+      run: zip -r webapp.zip . -x "*.git*" "node_modules/*" ".DS_Store" "src/.DS_Store" ".env"
     
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
