--- a/cloud-watch-config.json
+++ b/cloud-watch-config.json
@@ -11,7 +11,8 @@
                         "file_path": "/opt/webapp/logs/csye6225application.log",
                         "log_group_name": "csye6225",
                         "log_stream_name": "webapp",
-                        "timestamp_format": "%Y-%m-%d %H:%M:%S"
+                        "timestamp_format": "%Y-%m-%d %H:%M:%S",
+                        "timezone": "LOCAL"
                     }
                 ]
             }
