--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node --log-error src/index.ts",
+    "start": "ts-node src/index.ts",
     "build": "tsc",
     "test": "jest --forceExit"
   },
@@ -27,7 +27,6 @@
     "@types/sequelize": "^4.28.20",
     "@types/supertest": "^2.0.11",
     "jest": "^27.5.1",
-    "nodemon": "^2.0.15",
     "supertest": "^6.2.2",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.7.0",
@@ -41,9 +40,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "multer": "^1.4.5-lts.1",
-    "node-json-logger": "^0.2.1",
-    "pg": "^8.13.0",
-    "pg-hstore": "^2.3.4",
+    "pg": "^8.13.1",
     "sequelize": "^6.37.4",
     "statsd-client": "^0.4.7",
     "winston": "^3.15.0"
