image table fix

--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -79,6 +79,9 @@ jobs:
         run: |
           sudo -u postgres psql -c "DROP SCHEMA public CASCADE;"
           sudo -u postgres psql -c "CREATE SCHEMA public;"
+          DROP TYPE IF EXISTS images CASCADE;
+          DROP TABLE IF EXISTS images CASCADE;
+
       
       # Run Tests
       - name: Run Tests
