--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -24,19 +24,11 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ secrets.REGION }}
 
-    - name: Export AWS credentials for Packer
-      run: |
-        echo "Exporting AWS credentials for Packer"
-        export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
-        export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        export AWS_DEFAULT_REGION=${{ secrets.REGION }}
-
     - name: Set up Packer
       uses: hashicorp/setup-packer@v2
 
     - name: Initialize Packer
-      run: |
-        packer init .
+      run: packer init .
 
     - name: Build Packer Image
       run: |
