--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.7.5",
     "@types/sequelize": "^4.28.20",
+    "@types/statsd-client": "^0.4.6",
     "@types/supertest": "^2.0.11",
     "jest": "^27.5.1",
     "supertest": "^6.2.2",
@@ -42,7 +43,6 @@
     "multer": "^1.4.5-lts.1",
     "pg": "^8.13.1",
     "sequelize": "^6.37.4",
-    "statsd-client": "^0.4.7",
     "winston": "^3.15.0"
   }
 }
