--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "multer": "^1.4.5-lts.1",
     "pg": "^8.13.1",
     "sequelize": "^6.37.4",
+    "statsd-client": "^0.4.7",
     "winston": "^3.15.0"
   }
 }
