a07-logs mod, buildok

--- a/cloud-watch-config.json
+++ b/cloud-watch-config.json
@@ -10,9 +10,7 @@
                     {
                         "file_path": "/opt/webapp/logs/csye6225application.log",
                         "log_group_name": "csye6225",
-                        "log_stream_name": "webapp",
-                        "timestamp_format": "%Y-%m-%d %H:%M:%S",
-                        "timezone": "LOCAL"
+                        "log_stream_name": "webapp"
                     }
                 ]
             }
