--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -1,7 +1,7 @@
 name: Packer Build Image Workflow
 
 on:
-  push:
+  pull_request:
     branches:
       - main
 
@@ -48,8 +48,55 @@ jobs:
             -var 'source_ami=${{ secrets.SOURCE_AMI }}' \
             -var 'ssh_username=${{secrets.SSH_USERNAME}}'\
              aws.pkr.hcl
+    
+    - name: Install AWS CLI
+      run: sudo apt-get install -y awscli
 
-    - name: Share AMI with Demo Account
+    - name: Create New Launch Template Version
+      id: create_launch_template_version
       run: |
-          AMI_ID=$(aws ec2 describe-images --owners self --query 'Images[?Name==`'"${{ secrets.AMI_NAME }}"'`].ImageId' --output text)
-          aws ec2 modify-image-attribute --image-id $AMI_ID --launch-permission "Add=[{UserId=${{ secrets.DEMO_ACCOUNT_ID }}}]"
+        AMI_ID=$(aws ec2 describe-images --owners self --query 'Images[?Name==`'"${{ secrets.AMI_NAME }}"'`].ImageId' --output text)
+        LAUNCH_TEMPLATE_VERSION=$(aws ec2 create-launch-template-version \
+        --launch-template-id ${{ secrets.LAUNCH_TEMPLATE_ID }} \
+        --launch-template-data "{\"ImageId\":\"$AMI_ID\"}" \
+        --query 'LaunchTemplateVersion.VersionNumber' \
+        --output text)
+        echo "LAUNCH_TEMPLATE_VERSION=$LAUNCH_TEMPLATE_VERSION" >> $GITHUB_ENV
+     
+    - name: Update Auto Scaling Group
+      run: |
+        aws autoscaling update-auto-scaling-group \
+          --auto-scaling-group-name csye6225-asg \
+          --launch-template "LaunchTemplateId=${{ secrets.LAUNCH_TEMPLATE_ID }},Version=${{ env.LAUNCH_TEMPLATE_VERSION }}"
+
+    - name: Start Instance Refresh
+      id: instance_refresh
+      run: |
+        REFRESH_ID=$(aws autoscaling start-instance-refresh \
+          --auto-scaling-group-name csye6225-asg \
+          --query 'InstanceRefreshId' --output text)
+        echo "REFRESH_ID=$REFRESH_ID" >> $GITHUB_ENV
+
+    - name: Wait for Instance Refresh to Complete
+      run: |
+        MAX_RETRIES=60
+        RETRY_COUNT=0
+        while true; do
+          STATUS=$(aws autoscaling describe-instance-refreshes \
+            --auto-scaling-group-name csye6225-asg \
+            --instance-refresh-ids $REFRESH_ID \
+            --query 'InstanceRefreshes[0].Status' --output text)
+          echo "Current Instance Refresh Status: $STATUS"
+          if [[ "$STATUS" == "Successful" ]]; then
+            exit 0
+          elif [[ "$STATUS" == "Failed" ]]; then
+            echo "Instance refresh failed."
+            exit 1
+          fi
+          if [[ $RETRY_COUNT -ge $MAX_RETRIES ]]; then
+            echo "Instance refresh did not complete within the maximum retry count."
+            exit 1
+          fi
+          ((RETRY_COUNT++))
+          sleep 30
+        done
