--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -128,11 +128,20 @@ jobs:
         run: |
           zip -r webapp.zip . -x "*.git*"
 
-      - name: Step 3 - Configure AWS Credentials
+      - name: Step 3 - Configure AWS Credentials for Dev
+        if: ${{ env.DEPLOY_ENVIRONMENT == 'dev' }}
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
+  
+      - name: Step 3 - Configure AWS Credentials for Prod
+        if: ${{ env.DEPLOY_ENVIRONMENT == 'prod' }}
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_PROD }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_PROD }}
           aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
 
       - name: Step 4 - Setup Packer
