--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "app-root-path": "^3.1.0",
     "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.1",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "multer": "^1.4.5-lts.1",
