--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "ts-node src/index.ts",
     "build": "tsc",
-    "test": "jest --forceExit"
+    "test": "jest"
   },
   "keywords": [
     "webapp",
