--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@ node_modules
 .env
 package-lock.json
 .DS_Store
-aws.auto.pkrvars.hcl
 src/.DS_Store
 webapp.zip
 logs/csye6225application.log
 .vscode/settings.json
+mainfest.json
